syntax = "proto3";

option go_package = "github.com/korvised/ilog-shop";

message IsAvailableToSellReq {
  string playerId = 1;
  string itemId = 2;
}

message IsAvailableToSellRes {
  bool isAvailable = 1;
}


service InventoryGrpcService {
  rpc IsAvailableToSell(IsAvailableToSellReq) returns (IsAvailableToSellRes);
}