syntax = "proto3";

option go_package = "github.com/korvised/ilog-shop";

message PlayerProfile {
  string id = 1;
  string email = 2;
  string username = 3;
  string password = 4;
  string roleCode = 5;
  string created_at = 6;
  string updated_at = 7;
}

message CredentialSearchReq {
  string email = 1;
  string password = 2;
}

message FindOnePlayerProfileToRefreshReq {
  string playerId = 1;
}

message GetPlayerSavingAccountReq {
  string playerId = 1;
}

message GetPlayerSavingAccountRes {
  string playerId = 1;
  string balance = 2;
}


service PlayerGrpcService {
  rpc CredentialSearch(CredentialSearchReq) returns (PlayerProfile);
  rpc FindOnePlayerProfileToRefresh(FindOnePlayerProfileToRefreshReq) returns (PlayerProfile);
  rpc GetPlayerSavingAccount(GetPlayerSavingAccountReq) returns (GetPlayerSavingAccountRes);
}